--- a/stock/templates/prices.html
+++ b/stock/templates/prices.html
@@ -85,28 +85,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" href="/">Home</a>
+                        <a class="nav-link " aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/news" disabled>News</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/about" disabled>About</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/BuyPage">Buy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact" disabled>Contact Us</a>
+                        <a class="nav-link" href="/SellPage">Sell</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8501" disabled>Stock Prediction</a>
-                    </li> -->
+                        <a class="nav-link" href="/portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/transactions">Transactions</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/index_learn" disabled>Learn Trading</a>
 
                 </ul>
-                <!--      {% comment %} <form class="d-flex">-->
-                <!--        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-                <!--        <button class="btn btn-outline-success" type="submit">Search</button>-->
-                <!--      </form> {% endcomment %}-->
             </div>
 
             {% comment %}
