--- a/stock/templates/portfolio.html
+++ b/stock/templates/portfolio.html
@@ -43,7 +43,7 @@ margin-right:-5px; {% endcomment %}
                 <th scope="col">Market Price</th>
                 <th scope="col">Current Value</th>
                 <th scope="col">% Change</th>
-                <th scope="col">Profit Loss</th>
+                <th scope="col">Profit/Loss</th>
             </tr>
           </thead>
         
