--- a/stock/templates/portfolio11.html
+++ b/stock/templates/portfolio11.html
@@ -258,7 +258,7 @@ td{
                         <th scope="col">Market Price</th>
                         <th scope="col">Current Value</th>
                         <th scope="col">% Change</th>
-                        <th scope="col">Profit Loss</th>
+                        <th scope="col">Profit/Loss</th>
                     </tr>
                 </thead>
                 
