--- a/stock/templates/transactions.html
+++ b/stock/templates/transactions.html
@@ -195,15 +195,18 @@ td{
         {% csrf_token %}
     <!-- <button class='btn1' type="submit" class="msgBtn" style="background: #1b1658;border: 2px solid white; border-radius: 10px; font-weight: bold; color: white; width: 200px; height: 60px; margin-top:40px; float:right; margin-right:20px">Download Summary</button><br> -->
 </form>
+    {% if total > 0%}
     <h2 style="text-align:center; color: #03fb03;">Profit : <span style="color:#03fb03">{{total}}</span></h2>
+    {% else %}
     <h2 style="text-align:center; color: red;">Loss :<span style="color:red"> {{total}}</span></h2>
+    {% endif %}
     <hr style="color:#f3f704; width:1020px;margin-left:200px;height:5px;">
     <div class="wrapper">
         
     <h2 style="text-align:center; color: yellow;">Sell Transactions</h2>
     {% comment %} <a href="trade">click</a> {% endcomment %}
     <br>
-    <div class="sec" >
+    <div class="sec" style="text-align: center;">
         <table class="table table-striped table-bordered table-hover" >
             <thead class="thead-light">
                 <tr>
